# fech_capcut_resources

./: main.py  nuitka-crash-report.xml  pyproject.toml  test.html  trivial.ipynb
src/: link_with_file_path.py  parse_html.py
utils/: __init__.py  base_utils.py
