[tool.poetry]
name = "capcut"
version = "0.1.0"
description = ""
authors = ["Bryan <nbybrany@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
jupyter = "^1.0.0"
argparse = "^1.4.0"
lxml = "^5.1.0"
tqdm = "^4.66.2"
nuitka = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
